Remove margin-bottom from Hero. Modules now own their full vertical spacing to avoid layout coupling

--- a/component-library/app/components/ModuleGridCardNews/ModuleGridCardNews.module.scss
+++ b/component-library/app/components/ModuleGridCardNews/ModuleGridCardNews.module.scss
@@ -1,9 +1,11 @@
 @use '../../styles/includes' as *;
 
 .Root {
+    margin-top: 48px;
     margin-bottom: 48px;
 
     @include media(ML) {
+        margin-top: 72px;
         margin-bottom: 72px;
     }
 }
@@ -21,5 +23,5 @@
 .Button {
     display: flex;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 32px;
 }
