--- a/component-library/app/components/ModuleListCardAccordion/ModuleListCardAccordion.module.scss
+++ b/component-library/app/components/ModuleListCardAccordion/ModuleListCardAccordion.module.scss
@@ -1,9 +1,11 @@
 @use '../../styles/includes' as *;
 
 .Root {
+    margin-top: 48px;
     margin-bottom: 48px;
 
     @include media(ML) {
+        margin-top: 72px;
         margin-bottom: 72px;
     }
 }
